[package]
name = "leaper"
version = "0.2.1"
edition = "2021"
description = "A simple CLI tool to quickly leap to a directory"
repository = "https://github.com/mlueckl/leap"
keywords = ["cli", "cd", "terminal"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "leap"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
