[package]
name = "leaper"
version = "0.3.1"
edition = "2021"
description = "A simple CLI tool to quickly leap to a directory"
repository = "https://github.com/mlueckl/leaper"
keywords = ["cli", "cd", "terminal"]
categories = ["command-line-utilities"]
license = "MIT"

[[bin]]
name = "leaper"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
